NXP-29984: migrate DirectoryService-related components to use xmap registries